# sync-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  sync_skills.py
.github/workflows/: publish.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
docs/: DESIGN.md  USER_STORIES.md
skills/sync-skills/: SKILL.md
specs/001-symlink-sync/: spec.md
specs/001-symlink-sync/checklists/: requirements.md
specs/002-pluggable-skill-creation/: spec.md
specs/002-pluggable-skill-creation/checklists/: requirements.md
specs/003-pluggable-skill-iteration/: spec.md
specs/003-pluggable-skill-iteration/checklists/: requirements.md
specs/004-skill-distribution/: spec.md
specs/004-skill-distribution/checklists/: requirements.md
specs/005-skill-publishing/: spec.md
specs/005-skill-publishing/checklists/: requirements.md
specs/006-skill-installation/: spec.md
specs/006-skill-installation/checklists/: requirements.md
specs/007-skill-deletion/: spec.md
specs/008-init-configuration/: spec.md
src/sync_skills/: __init__.py  classification.py  cli.py  config.py  constants.py  git_ops.py  lifecycle.py  metadata.py  skill_version.py  state.py  symlink.py  sync_legacy.py
tests/: test_classification.py  test_cli_routing.py  test_config.py  test_git_ops.py  test_init.py  test_metadata.py  test_skill_version.py  test_state.py  test_symlink.py  test_sync_legacy.py  test_sync_skills.py  test_v1_commands.py
(+2 files in other folders)
