[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sync-skills"
version = "0.5.20260416.1"
description = "自定义 Skill 生命周期管理器 — 基于 git + symlink 管理 AI coding agent skills"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
sync-skills = "sync_skills.cli:main"

[project.urls]
Repository = "https://github.com/LuShan123888/sync-skills"

[tool.hatch.build.targets.wheel]
packages = ["src/sync_skills"]
sources = {"src" = ""}

[dependency-groups]
dev = [
    "build>=1.4.2",
    "pytest>=9.0.2",
]
